Make file validators independent of OS.